--- a/index.html
+++ b/index.html
@@ -184,6 +184,10 @@
                     <div class="progress percent80"><span>80%</span></div>
                     <strong>Microsoft Office</strong>
                     </li>
+                    <li>
+                    <div class="progress percent65"><span>65%</span></div>
+                    <strong>GIT</strong>
+                    </li>
                 </ul>
             </div>
 
