--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
 
             <div class="col-twelve">
                 <div class="copyright">
-                    <span><a href=https://www.styleshout.com">© Copyright 2020</a></span>
+                    <span><a href="https://www.styleshout.com">© Copyright 2020</a></span>
 
                 </div>
 
