--- a/index.html
+++ b/index.html
@@ -555,7 +555,8 @@
 
             <div class="col-twelve">
                 <div class="copyright">
-                    <span><a href="https://www.styleshout.com">© Copyright 2020</a></span>
+                     <span onclick="window.location='https://www.styleshout.com'">© Copyright 2020</span>
+                    
 
                 </div>
 
