--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
             <div class="col-full">
                 <h3>Portfólio</h3>
 
-                <p class="lead">Meus últimos projetos.</p>
+                <p class="lead">Meus últimos projetos</p>
             </div>
         </div>
 
