--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
                 <h1>
                     Beatriz de Luca Patriota. <br>
-                    Desenvolvedora Front-End e Designer.
+                    Desenvolvedora Front-End.
                 </h1>
 
                 <div class="home-content__buttons">
