--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
                  <h3><b>Idiomas</b><br></h3>
                  <p>Português - Nativo<br>
-                 Inglês - Fluente<br>
+                 Inglês - Intermediário<br>
                  Espanhol - Básico
                 </p>
 
@@ -165,7 +165,7 @@
                     <strong>ReactJS</strong>
                     </li>
                     <li>
-                    <div class="progress percent100"><span>100%</span></div>
+                    <div class="progress percent100"><span>80%</span></div>
                     <strong>Wordpress</strong>
                     </li>
                     <li>
@@ -177,15 +177,11 @@
                     <strong>Photoshop</strong>
                     </li>
                     <li>
-                    <div class="progress percent70"><span>70%</span></div>
-                    <strong>UI Design</strong>
-                    </li>
-                    <li>
                     <div class="progress percent80"><span>80%</span></div>
                     <strong>Microsoft Office</strong>
                     </li>
                     <li>
-                    <div class="progress percent65"><span>65%</span></div>
+                    <div class="progress percent65"><span>55%</span></div>
                     <strong>GIT</strong>
                     </li>
                 </ul>
@@ -203,11 +199,23 @@
 
             <div class="col-six tab-full left">
                 <div class="timeline">
+                    
+                                        <div class="timeline__block">
+                        <div class="timeline__bullet"></div>
+                        <div class="timeline__header">
+                            <p class="timeline__timeframe">Janeiro de 2020 - Presente</p>
+                            <h3>SaveAdd </h3>
+                            <h5>Estagiária em Desenvolvimento Frontend</h5>
+                        </div>
+                        <div class="timeline__desc">
+                            <p>Responsável pela prototipação de telas do sistema principal da empresa e codificação da parte visual do mesmo.</p>
+                        </div>
+                    </div> <!-- end timeline__block -->
 
                     <div class="timeline__block">
                         <div class="timeline__bullet"></div>
                         <div class="timeline__header">
-                            <p class="timeline__timeframe">Outubro 2019 - Presente</p>
+                            <p class="timeline__timeframe">Outubro 2019 - Junho 2020</p>
                             <h3>Habits Incubadora Escola </h3>
                             <h5>Líder de Produto: Web Dev</h5>
                         </div>
@@ -219,7 +227,7 @@
                     <div class="timeline__block">
                         <div class="timeline__bullet"></div>
                         <div class="timeline__header">
-                            <p class="timeline__timeframe">Junho 2018 - Presente</p>
+                            <p class="timeline__timeframe">Junho 2018 - Junho 2020</p>
                             <h3>Habits Incubadora Escola</h3>
                             <h5>Desenvolvedora Front-End</h5>
                         </div>
